objects/PriceRenewalCampaign__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account type Customer sold to</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Cannot find Account type Sold To</errorMessage>
            <filterItems>
                <field>Account.TF_RecordTypeDeveloperName__c</field>
                <operation>equals</operation>
                <value>Customer_Sold_To</value>
            </filterItems>
            <infoMessage>Search for Sold to customer only</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Renewal Campaigns (Account)</relationshipLabel>
        <relationshipName>Price_Renewal_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractedPriceIncrease__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percent increase of contracted prices</inlineHelpText>
        <label>Contracted Price Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContractedPriceValidDate__c</fullName>
        <inlineHelpText>Contracted price is valid until. Used to select contacted prices.</inlineHelpText>
        <label>Contracted Price Valid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractedUntilFrom__c</fullName>
        <inlineHelpText>From what expiration date</inlineHelpText>
        <label>Contracted Until From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractedUntilTo__c</fullName>
        <inlineHelpText>To what expiration date</inlineHelpText>
        <label>Contracted Until To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerInfoDate__c</fullName>
        <inlineHelpText>Ultimate date to inform the customer.</inlineHelpText>
        <label>Customer Info Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Free description of campain</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>Date when new purchase prices will be activated. Leave empty or &apos;today&apos; for renewals to be processed direct.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The template used to send the quote with the new price</inlineHelpText>
        <label>Email Template</label>
        <referenceTo>EmailTemplatePRC__c</referenceTo>
        <relationshipLabel>Price Renewal Campaigns</relationshipLabel>
        <relationshipName>Price_Renewal_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailText__c</fullName>
        <label>Email Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ImcdBusinessUnit__c</fullName>
        <label>Imcd Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDBusinessUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>LOB1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The pricebook of the related Quotes or the Purchage prices</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price Renewal Campaigns</relationshipLabel>
        <relationshipName>Price_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricesToProcess__c</fullName>
        <label>Prices To Process</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Principal Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Renewal Campaigns (Principal)</relationshipLabel>
        <relationshipName>Price_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Responsible Product manager</inlineHelpText>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchasePriceIncrease__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percent of increase for purchase Prices</inlineHelpText>
        <label>Purchase Price Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReportingLine__c</fullName>
        <label>ReportingLine</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales rep of related customers</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PriceRenewalCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Stage of campain.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setup</fullName>
                    <color>#999999</color>
                    <default>true</default>
                    <label>Setup</label>
                </value>
                <value>
                    <fullName>Select</fullName>
                    <color>#78C953</color>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                    <color>#3366FF</color>
                    <label>Review</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                    <color>#FFCC66</color>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                    <color>#FF0000</color>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                    <color>#33FF33</color>
                    <label>Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TF_TemplateId__c</fullName>
        <formula>EmailTemplate__r.EmailTemplateID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_TemplateId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeName__c</fullName>
        <inlineHelpText>Trade Name of product</inlineHelpText>
        <label>Trade Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <inlineHelpText>Date when new contracted prices will be acitve</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidTo__c</fullName>
        <inlineHelpText>Date until price is active</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Price Renewal Campaign</label>
    <nameField>
        <displayFormat>PRC-{000000}</displayFormat>
        <label>Price Renewal Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Renewal Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_check_End_before_From_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
($Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c 
, 
ISBLANK(ContractedUntilTo__c) = false 
, 
ISBLANK(ContractedUntilFrom__c) = false 
, 
 
(ContractedUntilFrom__c &gt; ContractedUntilTo__c
|| 
ContractedUntilTo__c &lt; TODAY() 
) 
)</errorConditionFormula>
        <errorMessage>Invalid contracted dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Emailtemplate_is_required_for_Contracted</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 




if (TEXT(PricesToProcess__c) != &apos;Purchase&apos; &amp;&amp;
 ISBLANK(EmailTemplate__c), true, false)

)</errorConditionFormula>
        <errorDisplayField>EmailTemplate__c</errorDisplayField>
        <errorMessage>Missing Email Template</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_Contracted_Price_need_Validity_Dates</fullName>
        <active>true</active>
        <description>Contracted Price PRC need validity dates</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 

If (TEXT(PricesToProcess__c) != &apos;Purchase&apos; = true,

IF (ISBLANK(ValidFrom__c)||
    ISBLANK(ValidTo__c), true, false), false)

)</errorConditionFormula>
        <errorDisplayField>ValidFrom__c</errorDisplayField>
        <errorMessage>A contracted price PRC needs validity dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Processed_campaign_is_end_stage</fullName>
        <active>true</active>
        <description>Once it is &apos;Processed&apos; on change possible</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 


ISPICKVAL(PRIORVALUE(Stage__c  ),&quot;Processed&quot;)
)</errorConditionFormula>
        <errorMessage>Processed stage has been reached. Stage cannot go back anymore</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wrong_validity_dates</fullName>
        <active>true</active>
        <description>Validity dates are not right</description>
        <errorConditionFormula>AND 
($Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c 
, 
ISBLANK(ValidFrom__c) = false 
, 
ISBLANK(ValidTo__c) = false 
, 
(ISCHANGED(ValidFrom__c) || 
ISCHANGED(ValidTo__c) ) 
, 
(ValidFrom__c &gt; ValidTo__c|| 
ValidTo__c &lt; TODAY() 
) 
)</errorConditionFormula>
        <errorDisplayField>ValidFrom__c</errorDisplayField>
        <errorMessage>The &quot;Valid from&quot; date needs to be before the &quot;Valid to&quot; date and  the &quot;Valid to&quot; date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>